src/main/default/objects/Ticket_Checklist_Step__c/Ticket_Checklist_Step__c.object-meta.xml
<CustomObject>
    <label>Ticket Checklist Step</label>
    <nameField>
        <label>Ticket Checklist Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Checklist Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>