src/main/default/objects/Ticket_Checklist_Step__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the step is complete.</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>