src/main/default/objects/Ticket_Checklist_Step__c/fields/Required_Step__c.field-meta.xml
<CustomField>
    <fullName>Required_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the step is required.</inlineHelpText>
    <label>Required Step</label>
    <type>Checkbox</type>
</CustomField>