src/main/default/objects/Ticket_Checklist_Step__c/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <inlineHelpText>Page in FieldFX Mobile that displays when a user selects the step on a checklist.</inlineHelpText>
    <label>Screen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>